# game-engine-ai

./: .build_failed  .clangd  .gitignore  .ninja_config  CMakeLists.txt  CMakePresets.json  CMakePresets.json.backup  COVERAGE_SETUP.md  LICENSE  PHYSICS_STRATEGY.md  QUICK_START.md  README.md  README_WINDOWS.md  SETUP.md  build.sh  build_coverage.bat  check_ide_setup.ps1  coverage_baseline.json  coverage_config.json  debug.bat  debug_animation_test.cpp  debug_keyframe_test.cpp  debug_track_test.cpp  dev.bat  dev.ps1  document.md  monitor.bat  reload_intellisense.ps1  run_coverage_analysis.ps1  run_physics_tests.ps1  setup_dependencies.bat  setup_dependencies.sh  start.bat  test_config_verification.cpp  test_fbx_simple.cpp  test_resource_simple.cpp  test_setup.bat  test_simple_resource.cpp  vcpkg.json
.kiro/hooks/: windows-build-hook.kiro.hook
.kiro/steering/: asset-conventions.md  conversation-language.md  critical-rules.md  development.md  namespace-conflict-prevention.md  naming-conventions.md  product.md  spec-development.md  structure.md  tech.md  testing-standards.md
assets/materials/: cow.mtl
assets/meshes/: cube.mtl
assets/shaders/: basic.vert  bloom_extract.frag  particle_compute.glsl  pbr_showcase.frag  pbr_showcase.vert  post_process.vert  skinned.frag  skinned.vert  test_skinned.frag  test_skinned.vert  tone_mapping.frag
cache/models/: 2c95def01fe8158.kmc  357b270ec3a0b3db.kmc  3e4777df76fecc3f.kmc  770d2af17c96a1e1.kmc  89109c843896797a.kmc  953c8b734eec9a16.kmc  97c464461e288cd1.kmc  9a7e8a4860d9037c.kmc  a91c387b6f8b4a57.kmc  d33149854e5be94a.kmc  da282c48a1631f7e.kmc
docs/: 3d-model-loading.md  README.md  advanced-build-features.md  advanced-shader-system-api.md  advanced-shader-system.md  animation-development-workflow.md  animation-system.md  api-reference.md  architecture.md  asset-naming-conventions.md  audio-system.md  build-system-advanced-features.md  coding-standards.md  coverage-setup.md  deterministic-physics.md  engine-naming-conventions.md  enhanced-test-framework.md  hierarchical-build-system.md  ide.md  material-system-guide.md  migration-guide.md  model-hot-reloading.md  modular-architecture.md  module-development-best-practices.md  module-development-guide.md  namespace-class-conflict-resolution-migration-guide.md  nvidia-physx-integration.md  particle-effects.md  physics-strategy.md  project-development-guide.md  quickstart.md  roadmap.md  setup.md  shader-development-workflow.md  spec-development-guide.md  testing-code-examples-validation.md  testing-complete-guide.md  testing-cross-reference-summary.md  testing-guide.md  testing-guidelines.md  (+11 more)
docs/tutorials/: README.md  creating-new-project.md  main-entry-point.md  player-implementation.md  project-implementation.md
engine/core/: Engine.cpp  Engine.h  Logger.cpp  Math.cpp  Math.h  TestConfigManager.cpp  TestFramework.cpp  TestRunner.cpp
engine/interfaces/: IAudioModule.h  IEngineModule.h  IGraphicsModule.h  IPhysicsModule.h  TestFramework.h
engine/modules/: BulletPhysicsModule.cpp  BulletPhysicsModule.h  GraphicsModuleFactory.cpp  GraphicsModuleFactory.h  OpenGLGraphicsModule.cpp  OpenGLGraphicsModule.h  PhysicsModuleFactory.cpp  PhysicsModuleFactory.h
engine/modules/audio-openal/: CMakeLists.txt  OpenALAudioModule.cpp  OpenALAudioModule.h
engine/modules/graphics-opengl/: CMakeLists.txt
engine/modules/physics-bullet/: CMakeLists.txt
examples/: MIGRATION_NOTICE.md  README.md  XBotCharacter.cpp  XBotCharacter.h  basic_example.cpp  character_comparison.cpp  character_controller_test.cpp  config.json  debug_fbx_isolated.cpp  debug_fbx_loading.cpp  debug_mesh_creation.cpp  debug_mesh_direct.cpp  debug_vertex_layout.cpp  engine_config.json  main.cpp  model_hot_reload_example.cpp  physics_debug_example.cpp  post_processing_demo.cpp  shader_system_demo.cpp  test_fbx_animation.cpp  test_fbx_minimal.cpp  test_fbx_simple.cpp  test_fbx_via_modelloader.cpp  visual_tests_demo.cpp
include/Animation/: Animation.h  AnimationCompression.h  AnimationController.h  AnimationDebugRenderer.h  AnimationEvent.h  AnimationHotReloader.h  AnimationImporter.h  AnimationLOD.h  AnimationPerformanceManager.h  AnimationProfiler.h  AnimationSerialization.h  AnimationSkeleton.h  AnimationStateMachine.h  AnimationStreaming.h  AnimationThreading.h  AnimationTransition.h  AnimationValidator.h  BlendTree.h  Bone.h  IKSolver.h  Keyframe.h  MorphTarget.h  Pose.h  SkeletalAnimation.h  Skeleton.h
include/Audio/: Audio3DCalculator.h  AudioBufferPool.h  AudioEngine.h  AudioLoader.h  AudioSourcePool.h
include/Core/: AssetValidator.h  ConfigManager.h  DynamicModuleLoader.h  Engine.h  IEngineModule.h  Logger.h  ModuleConfigLoader.h  ModuleError.h  ModuleRegistry.h  OpenGLContext.h  ProjectConfig.h  (+7 more)
logs/: build_performance.json
projects/: README.md
projects/BasicExample/: CMakeLists.txt  README.md
projects/BasicExample/config/: project_config.json
projects/GameExample/: CMakeLists.txt  README.md
projects/GameExample/assets/models/: Running.fbx  Walking.fbx
projects/GameExample/config/: config.json  project_config.json
projects/GameExample/src/: main.cpp
projects/GameExample/src/private/: XBotCharacter.cpp
projects/GameExample/src/public/: XBotCharacter.h
projects/Tests/: ARCHITECTURE.md  CMakeLists.txt  README.md
projects/Tests/config/: test_config.json
projects/Tests/integration/: README.md
projects/Tests/unit/: README.md
projects/Tests/utilities/: ProjectTestUtils.cpp  ProjectTestUtils.h
scripts/: README.md  benchmark_build_performance.bat  build.bat  build_clean.bat  build_config.json  build_config_manager.bat  build_coverage.bat  build_diagnostics.bat  build_hierarchical.bat  build_unified.bat  debug.bat  dev.bat  ninja_diagnostics.bat  optimize_build_config.bat  quick_test.bat  run_coverage_analysis.bat  run_enhanced_tests.bat  run_final_validation.bat  run_physics_tests.bat  run_tests.bat  setup_dependencies.bat  test_config.bat  test_runner.bat  tune_vcpkg_cache.bat  vcpkg_cache_manager.bat
test_assets/: test_model.mtl
tests/: TestUtils.h  test_texture_search_fallback.cpp
(+444 files in other folders)
